--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,8 +11,8 @@
 # if you're sharing your code publicly.
 
 development:
-  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
-  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  gmail_username: <%= ENV["paullin22@gmail.com"] %>
+  gmail_password: <%= ENV["IMokok123123"] %>
   secret_key_base: (not shown)
 
 test:
@@ -21,6 +21,6 @@ test:
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
 production:
-  gmail_username: <%= ENV["GMAIL_USERNAME"] %>
-  gmail_password: <%= ENV["GMAIL_PASSWORD"] %>
+  gmail_username: <%= ENV["paullin22@gmail.com"] %>
+  gmail_password: <%= ENV["IMokok123123"] %>
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
